# seynur-tools

./: .gitignore  LICENSE  README.md  cleanup_archive_for_splunk.py  restore-archive-for-splunk.py  splunk_restore_archive.py
ansible_splunk/: README.md
ansible_splunk/splunk-ansible-ui/: .env  .env.example  .gitignore  README.md  docker-compose.yml
ansible_splunk/splunk-ansible-ui/backend/: .env.example  Dockerfile  pyproject.toml
ansible_splunk/splunk-ansible-ui/backend/app/: __init__.py  config.py  main.py
ansible_splunk/splunk-ansible-ui/backend/app/api/: config.py  environments.py  git.py  health.py  inventory.py  jobs.py  settings.py  targets.py
ansible_splunk/splunk-ansible-ui/backend/app/models/: environment.py  job.py  target.py
ansible_splunk/splunk-ansible-ui/backend/app/services/: ansible_runner.py  config_reader.py  config_writer.py  git_service.py  job_manager.py  job_store.py  settings_store.py
ansible_splunk/splunk-ansible-ui/backend/tests/: test_config_reader.py
kamusm_signature_script/: README.md  kamusm.sh  kamusm_timestamp.sh
org_delete_old_frozen_buckets/: delete_old_frozen_buckets.sh
org_find_old_frozen_buckets/: find_old_frozen_buckets.sh
org_frozen_buckets_to_cloud_app/: README.md
restore_archive_for_splunk/: README.md  restore-archive-for-splunk.py
splunk_es8_config_updater/: README.md  splunk_es8_config_updater.sh  splunk_es8_config_updater_expanded.sh
splunk_query_runner/: README.md  all_runner_script  create_splunk_tokens  input_list.csv  splunk_query_runner.py  update_dates_for_input_files.py  user.conf
(+43 files in other folders)
